# treegrowthmodelling

./: .gitignore  README.md
GTree/: CMakeLists.txt
GTree/GTree_Interpolation/: cylinder.h  cylinder_fitter.h  graph_boost.h  interpolator.cpp  interpolator.h  main.cpp  viewer_back.cpp  viewer_back.h  viewer_front.cpp  viewer_front.h
GTree/GTree_TreeGrowthReconstruction/: cylinder.h  g_tree.cpp  g_tree.h  graph_gt.h  growth_model_region.cpp  growth_model_region.h  growth_viewer.cpp  growth_viewer.h  growth_viewer_imgui.cpp  growth_viewer_imgui.h  lobe.cpp  lobe.h  main.cpp  skeleton_grow.cpp  skeleton_grow.h
GTree/Interpolation/: CMakeLists.txt  cylinder_fitter.cpp  graph_boost.h  interpolator.h  main.cpp  viewer_back.cpp  viewer_back.h  viewer_front.cpp  viewer_front.h
GTree/TreeGrowthReconstruction/: CMakeLists.txt  cylinder.h  cylinder_fitter.cpp  cylinder_fitter.h  g_tree.h  graph_gt.h  growth_model_region.cpp  growth_model_region.h  growth_viewer.cpp  growth_viewer.h  growth_viewer_imgui.h  lobe.cpp  skeleton_grow.cpp  skeleton_grow.h
GTree/easy3d/algo/: CMakeLists.txt
GTree/easy3d/algo_ext/: CMakeLists.txt
GTree/easy3d/viewer/: viewer.cpp
GTree/resources/data/GTree_examples/A/: 26CN1_ahn2_tree_0e76be44-6026-4edd-9800-dbf03aa47e40.xyz  26CN1_ahn3_tree_0e76be44-6026-4edd-9800-dbf03aa47e40.xyz
GTree/resources/data/GTree_examples/A/correspondence/: 26CN1_ahn3_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_tsmaincorr.ply  corr_edges_1.csv  corr_vertices_1.csv
GTree/resources/data/GTree_examples/A/skeletons/: 26CN1_ahn3_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_tsmain.ply  26CN1_ahn4_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_tsmain.ply
GTree/resources/data/GTree_examples/B/: 26CN1_ahn2_tree_3d431e24-ec36-43ca-b3cf-8ab154f4adca.xyz  26CN1_ahn2_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa.xyz  26CN1_ahn3_tree_3d431e24-ec36-43ca-b3cf-8ab154f4adca.xyz  26CN1_ahn4_tree_3d431e24-ec36-43ca-b3cf-8ab154f4adca.xyz
GTree/resources/data/GTree_examples/B/correspondence/: corr_vertices_1.csv
GTree/resources/data/GTree_examples/B/skeletons/: 26CN1_ahn2_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa_skeleton_merged.ply  26CN1_ahn2_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa_skeleton_tsmain.ply
GTree/resources/data/GTree_examples/C/: 26CN1_ahn2_tree_5dda2264-29d1-4121-a36d-fc04e5ae2836.xyz  26CN1_ahn3_tree_5dda2264-29d1-4121-a36d-fc04e5ae2836.xyz  26CN1_ahn4_tree_5dda2264-29d1-4121-a36d-fc04e5ae2836.xyz
GTree/resources/data/GTree_examples/C/correspondence/: 26CN1_ahn3_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_tsmaincorr.ply  26CN1_ahn4_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_tsmaincorr.ply  corr_edges_0.csv  corr_edges_1.csv  corr_vertices_0.csv  corr_vertices_1.csv
GTree/resources/data/GTree_examples/C/skeletons/: 26CN1_ahn2_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_merged.ply  26CN1_ahn2_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_merged_main.ply  26CN1_ahn2_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_tsmain.ply  26CN1_ahn3_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_tsmain.ply  26CN1_ahn4_tree_43c62baa-384a-45cd-a326-a8a3c274cee5_skeleton_tsmain.ply
GTree/resources/data/GTree_examples/D/: 26CN1_ahn4_tree_503089de-2979-448e-be2e-c394f35cfba5.xyz
GTree/resources/data/GTree_examples/D/correspondence/: 26CN1_ahn3_tree_503089de-2979-448e-be2e-c394f35cfba5_skeleton_tsmaincorr.ply  corr_vertices_0.csv
GTree/resources/data/GTree_examples/D/skeletons/: 26CN1_ahn2_tree_503089de-2979-448e-be2e-c394f35cfba5_skeleton_merged.ply  26CN1_ahn2_tree_503089de-2979-448e-be2e-c394f35cfba5_skeleton_merged_main.ply
GTree_Evaluation/: thesis_growth_networkx.py
GTree_Interpolation/: CMakeLists.txt  cylinder.h  cylinder_fitter.cpp  cylinder_fitter.h  interpolator.cpp  main.cpp  viewer_back.cpp  viewer_back.h
GTree_TreeGrowthReconstruction/: CMakeLists.txt  cylinder.h  cylinder_fitter.cpp  cylinder_fitter.h  g_tree.h  graph_gt.h  growth_model_region.cpp  growth_model_region.h  growth_viewer.cpp  growth_viewer.h  growth_viewer_imgui.h  lobe.cpp  lobe.h  main.cpp  skeleton_grow.cpp  skeleton_grow.h
NetworkX/: pyvenv.cfg
NetworkX/Scripts/: activate  activate.bat
data/A/correspondence/: corr_edges_0.csv
data/A/skeletons/: 26CN1_ahn2_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_merged.ply
data/B/: 26CN1_ahn3_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa.xyz  26CN1_ahn4_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa.xyz
data/B/correspondence/: 26CN1_ahn2_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa_skeleton_tsmaincorr.ply  corr_edges_0.csv
data/B/skeletons/: 26CN1_ahn4_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa_skeleton_tsmain.ply
data/C/: 26CN1_ahn3_tree_43c62baa-384a-45cd-a326-a8a3c274cee5.xyz
data/D/: 26CN1_ahn2_tree_503089de-2979-448e-be2e-c394f35cfba5.xyz  26CN1_ahn3_tree_503089de-2979-448e-be2e-c394f35cfba5.xyz
data/D/correspondence/: 26CN1_ahn4_tree_503089de-2979-448e-be2e-c394f35cfba5_skeleton_tsmaincorr.ply  corr_vertices_1.csv
data/D/skeletons/: 26CN1_ahn3_tree_503089de-2979-448e-be2e-c394f35cfba5_skeleton_tsmain.ply  26CN1_ahn4_tree_503089de-2979-448e-be2e-c394f35cfba5_skeleton_tsmain.ply
easy3d/: CMakeLists.txt
easy3d/core/: spline_curve_fitting.h
easy3d/fileio/: CMakeLists.txt
resources/data/A/: 26CN1_ahn4_tree_0e76be44-6026-4edd-9800-dbf03aa47e40.xyz
resources/data/A/correspondence/: 26CN1_ahn2_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_tsmaincorr.ply  26CN1_ahn4_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_tsmaincorr.ply  corr_vertices_0.csv
resources/data/A/skeletons/: 26CN1_ahn2_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_merged_main.ply  26CN1_ahn2_tree_0e76be44-6026-4edd-9800-dbf03aa47e40_skeleton_tsmain.ply
resources/data/B/correspondence/: 26CN1_ahn3_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa_skeleton_tsmaincorr.ply  26CN1_ahn4_tree_7a095ea2-f289-4b80-bd86-dbd7c00092aa_skeleton_tsmaincorr.ply  corr_edges_1.csv  (+1 more)
resources/data/C/: 26CN1_ahn2_tree_43c62baa-384a-45cd-a326-a8a3c274cee5.xyz  26CN1_ahn4_tree_43c62baa-384a-45cd-a326-a8a3c274cee5.xyz
(+7 files in other folders)
